[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://AI/Child.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Music.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Tiles.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Hazard.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level4.gd" type="Script" id=8]
[ext_resource path="res://World/Goal.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 220.576, 22.282 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.9036, 69.6459 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 114.395, 83.376 )

[node name="Level4" type="Node2D"]
script = ExtResource( 8 )

[node name="Tiles" parent="." instance=ExtResource( 5 )]

[node name="Dirt" parent="Tiles" index="0"]
tile_data = PoolIntArray( -65537, 0, 5, -131072, 0, 6, -131071, 0, 6, -131070, 0, 6, -131069, 0, 6, -131068, 0, 6, -131067, 0, 6, -131066, 0, 6, -131065, 0, 6, -131064, 0, 6, -131063, 0, 6, -131062, 0, 6, -131061, 0, 6, -131060, 0, 6, -131059, 0, 6, -131058, 0, 6, -131057, 0, 6, -131056, 0, 7, -3, 0, 5, -2, 0, 6, -1, 0, 262149, -65536, 0, 65542, -65535, 0, 65542, -65534, 0, 65542, -65533, 0, 65542, -65532, 0, 65542, -65531, 0, 65542, -65530, 0, 65542, -65529, 0, 65542, -65528, 0, 65542, -65527, 0, 65542, -65526, 0, 65542, -65525, 0, 65542, -65524, 0, 65542, -65523, 0, 65542, -65522, 0, 65542, -65521, 0, 65542, -65520, 0, 262148, -65519, 0, 7, 65532, 0, 5, 65533, 0, 262149, 65534, 0, 65542, 65535, 0, 65542, 0, 0, 65542, 1, 0, 65542, 2, 0, 65542, 3, 0, 65542, 4, 0, 65542, 5, 0, 65542, 6, 0, 65542, 7, 0, 65542, 8, 0, 65542, 9, 0, 65542, 10, 0, 65542, 11, 0, 65542, 12, 0, 65542, 13, 0, 65542, 14, 0, 65542, 15, 0, 65542, 16, 0, 65542, 17, 0, 65543, 131068, 0, 65541, 131069, 0, 65542, 131070, 0, 65542, 131071, 0, 65542, 65536, 0, 65542, 65537, 0, 65542, 65538, 0, 65542, 65539, 0, 65542, 65540, 0, 65542, 65541, 0, 65542, 65542, 0, 65542, 65543, 0, 65542, 65544, 0, 65542, 65545, 0, 65542, 65546, 0, 65542, 65547, 0, 196612, 65548, 0, 131078, 65549, 0, 196613, 65550, 0, 65542, 65551, 0, 65542, 65552, 0, 65542, 65553, 0, 65543, 196603, 0, 5, 196604, 0, 262149, 196605, 0, 196612, 196606, 0, 131078, 196607, 0, 196613, 131072, 0, 65542, 131073, 0, 65542, 131074, 0, 65542, 131075, 0, 65542, 131076, 0, 65542, 131077, 0, 65542, 131078, 0, 65542, 131079, 0, 65542, 131080, 0, 65542, 131081, 0, 65542, 131082, 0, 65542, 131083, 0, 65543, 131085, 0, 65541, 131086, 0, 65542, 131087, 0, 65542, 131088, 0, 65542, 131089, 0, 65543, 262138, 0, 5, 262139, 0, 262149, 262140, 0, 65542, 262141, 0, 65543, 262143, 0, 131077, 196608, 0, 196613, 196609, 0, 65542, 196610, 0, 65542, 196611, 0, 65542, 196612, 0, 65542, 196613, 0, 65542, 196614, 0, 65542, 196615, 0, 65542, 196616, 0, 65542, 196617, 0, 65542, 196618, 0, 65542, 196619, 0, 262148, 196620, 0, 6, 196621, 0, 262149, 196622, 0, 65542, 196623, 0, 65542, 196624, 0, 196612, 196625, 0, 131079, 327674, 0, 65541, 327675, 0, 65542, 327676, 0, 65542, 327677, 0, 65543, 262144, 0, 65541, 262145, 0, 65542, 262146, 0, 65542, 262147, 0, 65542, 262148, 0, 65542, 262149, 0, 65542, 262150, 0, 65542, 262151, 0, 65542, 262152, 0, 65542, 262153, 0, 65542, 262154, 0, 65542, 262155, 0, 65542, 262156, 0, 65542, 262157, 0, 65542, 262158, 0, 65542, 262159, 0, 196612, 262160, 0, 131079, 393210, 0, 65541, 393211, 0, 65542, 393212, 0, 65542, 393213, 0, 65543, 393215, 0, 5, 327680, 0, 262149, 327681, 0, 65542, 327682, 0, 65542, 327683, 0, 65542, 327684, 0, 65542, 327685, 0, 65542, 327686, 0, 65542, 327687, 0, 65542, 327688, 0, 65542, 327689, 0, 65542, 327690, 0, 65542, 327691, 0, 65542, 327692, 0, 65542, 327693, 0, 65542, 327694, 0, 65542, 327695, 0, 65543, 458745, 0, 5, 458746, 0, 262149, 458747, 0, 65542, 458748, 0, 65542, 458749, 0, 262148, 458750, 0, 6, 458751, 0, 262149, 393216, 0, 65542, 393217, 0, 65542, 393218, 0, 65542, 393219, 0, 65542, 393220, 0, 65542, 393221, 0, 65542, 393222, 0, 65542, 393223, 0, 65542, 393224, 0, 65542, 393225, 0, 65542, 393226, 0, 65542, 393227, 0, 65542, 393228, 0, 65542, 393229, 0, 65542, 393230, 0, 65542, 393231, 0, 65543, 524281, 0, 65541, 524282, 0, 65542, 524283, 0, 65542, 524284, 0, 65542, 524285, 0, 65542, 524286, 0, 65542, 524287, 0, 65542, 458752, 0, 65542, 458753, 0, 65542, 458754, 0, 65542, 458755, 0, 65542, 458756, 0, 65542, 458757, 0, 65542, 458758, 0, 65542, 458759, 0, 65542, 458760, 0, 65542, 458761, 0, 65542, 458762, 0, 196612, 458763, 0, 131078, 458764, 0, 196613, 458765, 0, 65542, 458766, 0, 65542, 458767, 0, 65543, 589817, 0, 65541, 589818, 0, 65542, 589819, 0, 65542, 589820, 0, 65542, 589821, 0, 65542, 589822, 0, 65542, 589823, 0, 65542, 524288, 0, 65542, 524289, 0, 65542, 524290, 0, 65542, 524291, 0, 65542, 524292, 0, 65542, 524293, 0, 65542, 524294, 0, 65542, 524295, 0, 65542, 524296, 0, 65542, 524297, 0, 65542, 524298, 0, 65543, 524300, 0, 65541, 524301, 0, 65542, 524302, 0, 65542, 524303, 0, 327682, 524304, 0, 3, 655353, 0, 65541, 655354, 0, 65542, 655355, 0, 65542, 655356, 0, 65542, 655357, 0, 65542, 655358, 0, 65542, 655359, 0, 65542, 589824, 0, 65542, 589825, 0, 65542, 589826, 0, 65542, 589827, 0, 65542, 589828, 0, 65542, 589829, 0, 65542, 589830, 0, 65542, 589831, 0, 65542, 589832, 0, 65542, 589833, 0, 65542, 589834, 0, 262148, 589835, 0, 6, 589836, 0, 262149, 589837, 0, 65542, 589838, 0, 196612, 589839, 0, 131079, 720889, 0, 65541, 720890, 0, 65542, 720891, 0, 65542, 720892, 0, 65542, 720893, 0, 65542, 720894, 0, 65542, 720895, 0, 65542, 655360, 0, 65542, 655361, 0, 65542, 655362, 0, 65542, 655363, 0, 65542, 655364, 0, 65542, 655365, 0, 65542, 655366, 0, 65542, 655367, 0, 65542, 655368, 0, 65542, 655369, 0, 65542, 655370, 0, 65542, 655371, 0, 65542, 655372, 0, 65542, 655373, 0, 65542, 655374, 0, 65543, 786424, 0, 5, 786425, 0, 262149, 786426, 0, 65542, 786427, 0, 65542, 786428, 0, 65542, 786429, 0, 65542, 786430, 0, 65542, 786431, 0, 65542, 720896, 0, 65542, 720897, 0, 65542, 720898, 0, 65542, 720899, 0, 65542, 720900, 0, 65542, 720901, 0, 65542, 720902, 0, 65542, 720903, 0, 65542, 720904, 0, 65542, 720905, 0, 65542, 720906, 0, 65542, 720907, 0, 65542, 720908, 0, 65542, 720909, 0, 65542, 720910, 0, 262148, 720911, 0, 6, 720912, 0, 196610, 720913, 0, 3, 851960, 0, 131077, 851961, 0, 131078, 851962, 0, 196613, 851963, 0, 65542, 851964, 0, 65542, 851965, 0, 65542, 851966, 0, 65542, 851967, 0, 65542, 786432, 0, 65542, 786433, 0, 65542, 786434, 0, 65542, 786435, 0, 65542, 786436, 0, 65542, 786437, 0, 65542, 786438, 0, 65542, 786439, 0, 65542, 786440, 0, 65542, 786441, 0, 65542, 786442, 0, 65542, 786443, 0, 65542, 786444, 0, 65542, 786445, 0, 65542, 786446, 0, 65542, 786447, 0, 196612, 786448, 0, 131079, 917498, 0, 65541, 917499, 0, 65542, 917500, 0, 65542, 917501, 0, 65542, 917502, 0, 65542, 917503, 0, 65542, 851968, 0, 65542, 851969, 0, 65542, 851970, 0, 65542, 851971, 0, 65542, 851972, 0, 65542, 851973, 0, 65542, 851974, 0, 65542, 851975, 0, 65542, 851976, 0, 65542, 851977, 0, 65542, 851978, 0, 65542, 851979, 0, 65542, 851980, 0, 65542, 851981, 0, 65542, 851982, 0, 196612, 851983, 0, 131079, 983033, 0, 1, 983034, 0, 262147, 983035, 0, 131078, 983036, 0, 131078, 983037, 0, 131078, 983038, 0, 131078, 983039, 0, 196613, 917504, 0, 65542, 917505, 0, 65542, 917506, 0, 65542, 917507, 0, 65542, 917508, 0, 65542, 917509, 0, 65542, 917510, 0, 65542, 917511, 0, 65542, 917512, 0, 65542, 917513, 0, 65542, 917514, 0, 65542, 917515, 0, 65542, 917516, 0, 196612, 917517, 0, 131078, 917518, 0, 131079, 1048575, 0, 131077, 983040, 0, 131078, 983041, 0, 131078, 983042, 0, 196613, 983043, 0, 65542, 983044, 0, 65542, 983045, 0, 65542, 983046, 0, 65542, 983047, 0, 65542, 983048, 0, 65542, 983049, 0, 65542, 983050, 0, 65542, 983051, 0, 196612, 983052, 0, 131079, 1048578, 0, 131077, 1048579, 0, 131078, 1048580, 0, 131078, 1048581, 0, 131078, 1048582, 0, 131078, 1048583, 0, 131078, 1048584, 0, 196613, 1048585, 0, 65542, 1048586, 0, 196612, 1048587, 0, 131079, 1114120, 0, 131077, 1114121, 0, 131078, 1114122, 0, 131079 )

[node name="Water" parent="Tiles" index="1"]
tile_data = PoolIntArray( 0, 0, 5, 1, 0, 6, 2, 0, 6, 3, 0, 6, 4, 0, 6, 5, 0, 6, 6, 0, 6, 7, 0, 6, 8, 0, 6, 9, 0, 6, 10, 0, 6, 11, 0, 6, 12, 0, 6, 13, 0, 196610, 14, 0, 3, 65536, 0, 65541, 65537, 0, 65542, 65538, 0, 65542, 65539, 0, 65542, 65540, 0, 65542, 65541, 0, 65542, 65542, 0, 65542, 65543, 0, 65542, 65544, 0, 65542, 65545, 0, 65542, 65546, 0, 65542, 65547, 0, 65542, 65548, 0, 65542, 65549, 0, 65543, 131072, 0, 65541, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 65542, 131081, 0, 65542, 131082, 0, 65542, 131083, 0, 65542, 131084, 0, 65542, 131085, 0, 262148, 131086, 0, 7, 196608, 0, 65541, 196609, 0, 0, 196615, 0, 0, 196616, 0, 65542, 196617, 0, 65542, 196618, 0, 65542, 196619, 0, 65542, 196620, 0, 65542, 196621, 0, 196612, 196622, 0, 131079, 327679, 0, 5, 262144, 0, 262149, 262145, 0, 0, 262151, 0, 0, 262152, 0, 65542, 262153, 0, 65542, 262154, 0, 65542, 262155, 0, 65542, 262156, 0, 65542, 262157, 0, 65543, 393214, 0, 1, 393215, 0, 327683, 327680, 0, 65542, 327681, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 65542, 327689, 0, 65542, 327690, 0, 65542, 327691, 0, 65542, 327692, 0, 65542, 327693, 0, 262148, 327694, 0, 7, 327696, 1, 5, 327697, 1, 7, 458751, 0, 65541, 393216, 0, 65542, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 65542, 393224, 0, 65542, 393225, 0, 65542, 393226, 0, 65542, 393227, 0, 196612, 393228, 0, 131078, 393229, 0, 131078, 393230, 0, 131079, 393232, 1, 65541, 393233, 1, 65543, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 65542, 458757, 0, 65542, 458758, 0, 65542, 458759, 0, 65542, 458760, 0, 65542, 458761, 0, 65542, 458762, 0, 65542, 458763, 0, 65543, 458768, 1, 65541, 458769, 1, 65543, 524291, 0, 0, 524292, 0, 65542, 524293, 0, 65542, 524294, 0, 65542, 524295, 0, 65542, 524296, 0, 65542, 524297, 0, 65542, 524298, 0, 65542, 524299, 0, 327682, 524300, 0, 2, 524301, 0, 2, 524302, 0, 0, 524303, 0, 0, 524304, 1, 65541, 524305, 1, 65543, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589839, 1, 5, 589840, 1, 262149, 589841, 1, 65543, 655371, 0, 0, 655375, 1, 65541, 655376, 1, 65542, 655377, 1, 65543, 720910, 1, 5, 720911, 1, 262149, 720912, 1, 65542, 720913, 1, 65543, 786446, 1, 65541, 786447, 1, 65542, 786448, 1, 65542, 786449, 1, 65543, 851982, 1, 65541, 851983, 1, 65542, 851984, 1, 65542, 851985, 1, 65543, 917518, 1, 65541, 917519, 1, 65542, 917520, 1, 65542, 917521, 1, 65543, 983044, 1, 5, 983045, 1, 6, 983046, 1, 6, 983047, 1, 6, 983048, 1, 6, 983049, 1, 6, 983050, 1, 6, 983051, 1, 6, 983052, 1, 6, 983053, 1, 6, 983054, 1, 262149, 983055, 1, 65542, 983056, 1, 65542, 983057, 1, 65543, 1114107, 1, 5, 1114108, 1, 6, 1114109, 1, 6, 1114110, 1, 6, 1114111, 1, 6, 1048576, 1, 6, 1048577, 1, 6, 1048578, 1, 6, 1048579, 1, 6, 1048580, 1, 262149, 1048581, 1, 65542, 1048582, 1, 65542, 1048583, 1, 65542, 1048584, 1, 65542, 1048585, 1, 65542, 1048586, 1, 65542, 1048587, 1, 65542, 1048588, 1, 65542, 1048589, 1, 65542, 1048590, 1, 65542, 1048591, 1, 65542, 1048592, 1, 65542, 1048593, 1, 65543, 1179643, 1, 131077, 1179644, 1, 131078, 1179645, 1, 131078, 1179646, 1, 131078, 1179647, 1, 131078, 1114112, 1, 131078, 1114113, 1, 131078, 1114114, 1, 131078, 1114115, 1, 131078, 1114116, 1, 131078, 1114117, 1, 131078, 1114118, 1, 131078, 1114119, 1, 131078, 1114120, 1, 131078, 1114121, 1, 131078, 1114122, 1, 131078, 1114123, 1, 131078, 1114124, 1, 131078, 1114125, 1, 131078, 1114126, 1, 131078, 1114127, 1, 131078, 1114128, 1, 131078, 1114129, 1, 131079 )

[node name="Grass" parent="Tiles" index="2"]
tile_data = PoolIntArray( 65535, 1, 5, 0, 1, 6, 1, 1, 6, 2, 1, 6, 3, 1, 6, 4, 1, 6, 5, 1, 196610, 6, 1, 2, 7, 1, 2, 8, 1, 2, 9, 1, 196611, 10, 1, 6, 11, 1, 6, 12, 1, 6, 13, 1, 7, 131071, 1, 65541, 65536, 1, 65542, 65537, 1, 196612, 65538, 1, 131078, 65539, 1, 196613, 65540, 1, 65542, 65541, 1, 65543, 65542, 0, 1, 65543, 0, 196611, 65544, 0, 7, 65545, 1, 131077, 65546, 1, 196613, 65547, 1, 65542, 65548, 1, 65542, 65549, 1, 65543, 196606, 1, 5, 196607, 1, 262149, 131072, 1, 65542, 131073, 1, 65543, 131075, 1, 131077, 131076, 1, 196613, 131077, 1, 327682, 131078, 1, 3, 131079, 0, 65541, 131080, 0, 327682, 131081, 0, 3, 131082, 1, 65541, 131083, 1, 65542, 131084, 1, 196612, 131085, 1, 131079, 262142, 1, 65541, 262143, 1, 65542, 196608, 1, 65542, 196609, 1, 65543, 196611, 0, 0, 196612, 1, 131077, 196613, 1, 131079, 196614, 0, 5, 196615, 0, 327685, 196616, 0, 131079, 196617, 1, 5, 196618, 1, 262149, 196619, 1, 65542, 196620, 1, 65543, 327678, 1, 65541, 327679, 1, 65542, 262144, 1, 65542, 262145, 1, 65543, 262148, 0, 5, 262149, 0, 6, 262150, 0, 262149, 262151, 0, 65543, 262152, 1, 5, 262153, 1, 262149, 262154, 1, 65542, 262155, 1, 65542, 262156, 1, 65543, 393214, 1, 65541, 393215, 1, 65542, 327680, 1, 196612, 327681, 1, 131079, 327682, 0, 5, 327683, 0, 6, 327684, 0, 262149, 327685, 0, 65542, 327686, 0, 65542, 327687, 0, 65543, 327688, 1, 65541, 327689, 1, 65542, 327690, 1, 65542, 327691, 1, 65542, 327692, 1, 65543, 458750, 1, 131077, 458751, 1, 131078, 393216, 1, 131079, 393217, 0, 5, 393218, 0, 262149, 393219, 0, 65542, 393220, 0, 196612, 393221, 0, 131078, 393222, 0, 196613, 393223, 0, 65543, 393224, 1, 65541, 393225, 1, 65542, 393226, 1, 65542, 393227, 1, 65542, 393228, 1, 65543, 524286, 0, 5, 524287, 0, 6, 458752, 0, 6, 458753, 0, 262149, 458754, 0, 65542, 458755, 0, 65542, 458756, 0, 65543, 458758, 0, 131077, 458759, 0, 131079, 458760, 1, 65541, 458761, 1, 65542, 458762, 1, 65542, 458763, 1, 196612, 458764, 1, 131079, 589821, 0, 5, 589822, 0, 262149, 589823, 0, 65542, 524288, 0, 65542, 524289, 0, 65542, 524290, 0, 65542, 524291, 0, 65542, 524292, 0, 327682, 524293, 0, 3, 524294, 1, 5, 524295, 1, 6, 524296, 1, 262149, 524297, 1, 65542, 524298, 1, 65542, 524299, 1, 65543, 655357, 0, 65541, 655358, 0, 65542, 655359, 0, 65542, 589824, 0, 65542, 589825, 0, 65542, 589826, 0, 65542, 589827, 0, 65542, 589828, 0, 65543, 589829, 1, 1, 589830, 1, 262147, 589831, 1, 196613, 589832, 1, 65542, 589833, 1, 65542, 589834, 1, 196612, 589835, 1, 131079, 720893, 0, 131077, 720894, 0, 131078, 720895, 0, 131078, 655360, 0, 131078, 655361, 0, 131078, 655362, 0, 131078, 655363, 0, 131078, 655364, 0, 262146, 655365, 0, 3, 655367, 1, 131077, 655368, 1, 131078, 655369, 1, 131078, 655370, 1, 131079, 786436, 0, 1, 786437, 0, 2, 786438, 0, 3, 786439, 1, 1, 786440, 1, 3 )

[node name="Cliff" parent="Tiles" index="3"]
tile_data = PoolIntArray( -196600, 2, 0, -196599, 2, 2, -65540, 2, 0, -65539, 2, 1, -65538, 2, 1, -65537, 2, 1, -131072, 2, 1, -131071, 2, 1, -131070, 2, 1, -131069, 2, 1, -131068, 2, 1, -131067, 2, 1, -131066, 2, 1, -131065, 2, 1, -131064, 2, 131078, -131063, 2, 131077, -131062, 2, 1, -131061, 2, 1, -131060, 2, 1, -131059, 2, 1, -131058, 2, 5, -131057, 2, 196610, -4, 2, 65536, -3, 2, 65537, -2, 2, 65541, -1, 2, 131073, -65536, 2, 131073, -65535, 2, 131073, -65534, 2, 131073, -65533, 2, 131073, -65532, 2, 131073, -65531, 2, 131073, -65530, 2, 131073, -65529, 2, 131073, -65528, 2, 131073, -65527, 2, 131073, -65526, 2, 131073, -65525, 2, 131073, -65524, 2, 131073, -65523, 2, 131073, -65522, 2, 131074, 65531, 2, 0, 65532, 2, 131078, 65533, 2, 65537, 65534, 2, 65538, 11, 1, 0, 12, 1, 0, 131067, 2, 65536, 131068, 2, 65537, 131069, 2, 65541, 131070, 2, 131074, 65542, 3, 0, 65543, 3, 0, 196602, 2, 0, 196603, 2, 131078, 196604, 2, 65541, 196605, 2, 131074, 131078, 3, 0, 131079, 3, 262146, 131080, 3, 0, 262137, 2, 0, 262138, 2, 131078, 262139, 2, 65537, 262140, 2, 65538, 196616, 3, 65540, 196617, 0, 0, 196618, 0, 0, 196620, 1, 0, 327673, 2, 65536, 327674, 2, 65537, 327675, 2, 65537, 327676, 2, 65538, 262152, 3, 131076, 262160, 2, 196611, 393208, 2, 0, 393209, 2, 131078, 393210, 2, 65537, 393211, 2, 65537, 393212, 2, 65538, 327687, 0, 0, 327695, 2, 3, 327696, 1, 0, 458744, 2, 65536, 458745, 2, 65537, 458746, 2, 65541, 458747, 2, 131073, 458748, 2, 131074, 393223, 0, 0, 393227, 1, 0, 393231, 2, 65539, 393232, 1, 0, 524280, 2, 65536, 524281, 2, 65537, 524282, 2, 65538, 458762, 0, 0, 458763, 0, 0, 458767, 2, 65539, 589816, 2, 65536, 589817, 2, 65537, 589818, 2, 65538, 524302, 2, 4, 524303, 2, 196615, 524304, 0, 0, 655351, 2, 0, 655352, 2, 131078, 655353, 2, 65541, 655354, 2, 131074, 589838, 2, 65539, 720887, 2, 65536, 720888, 2, 65537, 720889, 2, 65538, 655374, 2, 131075, 786423, 2, 131072, 786424, 2, 65542, 786425, 2, 65538, 851960, 2, 65536, 851961, 2, 131077, 851962, 2, 2, 917496, 2, 65536, 917497, 2, 65537, 917498, 2, 131077, 917499, 2, 2, 983032, 2, 131072, 983033, 2, 65542, 983034, 2, 65537, 983035, 2, 131077, 983036, 2, 1, 983037, 2, 1, 983038, 2, 1, 983039, 2, 1, 917504, 2, 2, 1048569, 2, 65536, 1048570, 2, 65541, 1048571, 2, 131073, 1048572, 2, 131073, 1048573, 2, 131073, 1048574, 2, 131073, 1048575, 2, 131073, 983040, 2, 0, 983041, 2, 196609, 983042, 2, 196609, 983043, 2, 196610, 1114105, 2, 131072, 1114106, 2, 65543, 1179642, 2, 131075 )

[node name="GroundLevel3" parent="Tiles" index="4"]
tile_data = PoolIntArray( 1, 1, 65536, 2, 1, 3, 12, 1, 4, 65536, 0, 0, 65537, 1, 131076, 65548, 1, 65540, 196607, 1, 65536, 131072, 1, 3, 131074, 1, 5, 131075, 1, 7, 131079, 0, 4, 131083, 1, 5, 131084, 1, 262145, 262142, 1, 65536, 262143, 1, 131073, 196610, 1, 65541, 196611, 1, 262148, 196612, 1, 7, 196615, 0, 65538, 196616, 0, 3, 196617, 1, 4, 196619, 1, 196608, 196620, 1, 131079, 327678, 1, 131076, 262146, 1, 65541, 262147, 1, 65542, 262148, 1, 327682, 262149, 1, 3, 262150, 0, 65536, 262151, 0, 131073, 262152, 1, 1, 262153, 1, 0, 262154, 1, 65539, 262155, 1, 131073, 262156, 0, 4, 327682, 1, 131077, 327683, 1, 196613, 327684, 1, 65543, 327685, 0, 1, 327686, 0, 131073, 327690, 1, 131076, 327691, 0, 65536, 327692, 0, 131073, 393219, 1, 65541, 393220, 1, 262148, 393221, 1, 6, 393222, 1, 7, 393225, 1, 4, 393226, 0, 65536, 393227, 0, 131073, 458753, 1, 5, 458754, 1, 6, 458755, 1, 262149, 458756, 1, 65542, 458757, 1, 65542, 458758, 1, 65543, 458760, 1, 5, 458761, 1, 262145, 458762, 0, 131076, 458763, 1, 4, 589823, 1, 5, 524288, 1, 6, 524289, 1, 327685, 524290, 1, 131078, 524291, 1, 131078, 524292, 1, 131078, 524293, 1, 131078, 524294, 1, 131079, 524296, 1, 65541, 524297, 1, 262148, 524298, 1, 196610, 524299, 1, 131073, 655357, 1, 5, 655358, 1, 6, 655359, 1, 262149, 589824, 1, 196612, 589825, 1, 131079, 589831, 1, 1, 589832, 1, 327683, 589833, 1, 196612, 589834, 1, 131079, 720893, 1, 131077, 720894, 1, 131078, 720895, 1, 131078, 655360, 1, 131079, 655368, 1, 131077, 655369, 1, 131079, 786436, 0, 1, 786437, 0, 3 )

[node name="Props" parent="Tiles" index="5"]
tile_data = PoolIntArray( -327673, 38, 0, -262144, 45, 0, -262143, 45, 0, -262142, 45, 0, -262141, 45, 0, -262140, 45, 0, -262139, 45, 0, -262138, 45, 0, -262136, 45, 0, -262135, 45, 0, -262134, 45, 0, -262133, 45, 0, -262132, 45, 0, -262131, 45, 0, -262130, 45, 0, -131072, 42, 0, -131071, 43, 0, -131070, 43, 0, -131069, 43, 0, -131068, 43, 0, -131067, 43, 0, -131066, 33, 0, -131065, 43, 0, -131064, 43, 0, -131063, 43, 0, -131062, 43, 0, -131061, 43, 0, -131060, 43, 0, -131059, 43, 0, -131058, 44, 0, -65521, 32, 1, 1, 1, 0, 2, 32, 1, 9, 32, 1, 15, 32, 0, 131068, 26, 0, 65538, 32, 0, 65545, 32, 0, 65551, 32, 0, 131074, 32, 0, 131081, 32, 0, 131087, 32, 0, 262142, 10, 0, 196610, 32, 65538, 196611, 32, 4, 196616, 32, 65540, 196617, 32, 65539, 196623, 32, 65538, 196624, 32, 65536, 196625, 32, 65536, 196626, 32, 4, 327675, 26, 0, 262147, 8, 0, 262150, 8, 0, 393214, 28, 0, 327687, 5, 0, 393222, 4, 0, 393223, 4, 0, 458753, 20, 0, 458757, 8, 0, 458758, 4, 0, 458759, 4, 0, 589821, 2, 0, 524291, 4, 0, 524292, 11, 0, 524293, 12, 0, 524294, 12, 0, 655357, 19, 0, 851977, 27, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Child" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 189.269, 218.504 )
child_type = 2

[node name="Child2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 189.191, 321.809 )

[node name="Child3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 276.872, 268.776 )

[node name="Child4" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 247.88, 311.202 )

[node name="Hazard" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 347.413, 501.784 )

[node name="CollisionShape2D" parent="YSort/Hazard" index="1"]
position = Vector2( 0.0113831, 1.49805 )
shape = SubResource( 1 )

[node name="Hazard2" parent="YSort" instance=ExtResource( 6 )]
position = Vector2( 467.413, 408.784 )

[node name="CollisionShape2D" parent="YSort/Hazard2" index="1"]
position = Vector2( 2.01135, 0.498047 )
shape = SubResource( 3 )

[node name="Goal" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( 372.943, 49.1376 )

[node name="Goal" parent="YSort/Goal" index="0"]
position = Vector2( -181.833, -24.3518 )

[node name="CollisionShape2D" parent="YSort/Goal" index="1"]
position = Vector2( -181.482, -18.184 )
shape = SubResource( 2 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 312.835, 289.226 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 312.835, 289.226 )

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="Music" parent="." instance=ExtResource( 4 )]
[connection signal="area_entered" from="YSort/Hazard" to="." method="_on_Hazard_area_entered"]
[connection signal="area_entered" from="YSort/Hazard2" to="." method="_on_Hazard_area_entered"]
[connection signal="area_entered" from="YSort/Goal" to="." method="_on_Goal_area_entered"]
[connection signal="area_exited" from="YSort/Goal" to="." method="_on_Goal_area_exited"]
[connection signal="timeout_signal" from="UI" to="." method="_on_UI_timeout_signal"]

[editable path="Tiles"]

[editable path="YSort/Hazard"]

[editable path="YSort/Hazard2"]

[editable path="YSort/Goal"]
